--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "spotify--severless--function",
-  "version": "1.0.0",
-  "description": "This is a spotify function to host my real time spotify.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.7.7"
+    "name": "your-project-name",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+      "dev": "netlify dev"
+    },
+    "dependencies": {
+      "axios": "^1.7.7",
+      "express": "^4.18.2"
+    },
+    "devDependencies": {
+      "netlify-cli": "^17.0.0"
+    }
   }
-}
