--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,10 @@
-[build]
-  functions = "netlify/functions"
-
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
+  // netlify.toml
+  [build]
+    functions = "netlify/functions"
+  
+  [[headers]]
+    for = "/*"
+      [headers.values]
+      Access-Control-Allow-Origin = "*"
+      Access-Control-Allow-Methods = "GET, OPTIONS"
+      Access-Control-Allow-Headers = "Content-Type"
