--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
+
 {
-    "name": "your-project-name",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "dev": "netlify dev"
-    },
-    "dependencies": {
-      "axios": "^1.7.7",
-      "express": "^4.18.2"
-    },
-    "devDependencies": {
-      "netlify-cli": "^17.0.0"
-    }
+  "name": "spotify-now-playing",
+  "version": "1.0.0",
+  "description": "Spotify Now Playing Function",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.6.2"
   }
+}
