--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,9 @@
-  // netlify.toml
-  [build]
-    functions = "netlify/functions"
-  
-  [[headers]]
-    for = "/*"
-      [headers.values]
-      Access-Control-Allow-Origin = "*"
-      Access-Control-Allow-Methods = "GET, OPTIONS"
-      Access-Control-Allow-Headers = "Content-Type"
+[build]
+  functions = "netlify/functions"
+
+[[redirects]]
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type"
